@@ -33,13 +33,15 @@
 
 namespace ConfigSvc {
 
+/// @addtogroup ConfigSvc
+
 /**
+ *  @ingroup ConfigSvc
+ *
  *  Exception classes for ConfigSvc package.
  *
  *  This software was developed for the LCLS project.  If you use all or 
  *  part of it, please give an appropriate acknowledgment.
- *
- *  @see AdditionalClass
  *
  *  @version $Id$
  *
